Att seção sobre nós

--- a/about.html
+++ b/about.html
@@ -67,13 +67,61 @@
 						Sobre o projeto
 					</h2>	
 				</div>
-                <div id="animation-1">
-                    <p>
-                        O projeto presente faz parte do projeto integrador para conclusão do curso de front end pela Digital House em parceria com o Ação Hack (Facebook).
-                        <br>
-                        
-                        Foi idealizado um site onde o usuário pode acessar receitas aleatórias para fazer ou pesquisar por uma específica.
-                    </p>
+                <div class="col-xl-12 about" id="centroabout">
+					<div>
+						<img src="img/about/1.png">		
+					</div>
+					<div>
+						<img src="img/about/2.png">
+					</div>
+					<div>
+						<img src="img/about/3.png">		
+					</div>
+					<div>
+						<img src="img/about/4.png">		
+					</div>
+					<div>
+						<img src="img/about/5.png">		
+					</div>
+					<div>
+						<img src="img/about/6.png">		
+					</div>
+					<div>
+						<img src="img/about/7.png">		
+					</div>
+					<div>
+						<img src="img/about/8.png">		
+					</div>
+					<div>
+						<img src="img/about/9.png">		
+					</div>
+					<div>
+						<img src="img/about/10.png">		
+					</div>
+					<div>
+						<img src="img/about/11.png">		
+					</div>
+					<div>
+						<img src="img/about/12.png">		
+					</div>
+					<div>
+						<img src="img/about/13.png">		
+					</div>
+					<div>
+						<img src="img/about/14.png">		
+					</div>
+					<div>
+						<img src="img/about/15.png">		
+					</div>
+					<div>
+						<img src="img/about/16.png">		
+					</div>
+					<div>
+						<img src="img/about/17.png">		
+					</div>
+					<div>
+						<img src="img/about/18.png">
+					</div>
                 </div>
 			</section>
 		</main>
